@@ -1045,35 +1045,6 @@ function workflow_requirements($phase) {
   }
 }
 
-/*
- * Determine if the Workflow Form must be shown. 
- * If not, a formatter must be shown, since there are no valid options.
- * @todo: change interface to workflow_show_form($state, $choices)
- *
- * @param $sid
- *   the current state ID.
- * @param $workflow
- *   the workflow object (might be derived from $sid).
- * @param $choices
- *   an array with $id => $label options, as determined in WorkflowState->getOptions().
- * 
- * @return
- *   Boolean, TRUE = a form must be shown; FALSE = no form, a formatter must be shown instead.
- */
-function workflow_show_form($sid, $workflow, $choices) {
-  $count = count($choices);
-  // The easiest case first: more then one option: always show form.
-  if ($count > 1) {
-    return TRUE;
-  }
-  // Only when in creation phase, one option is sufficient,
-  // since the '(creation)' option is not included in $choices.
-  if ($sid == $workflow->getCreationSid()) {
-    return TRUE;
-  }
-  return FALSE;
-}
-
 /**
  * Get a single value from an Field API $items array.
  *
