@@ -241,3 +241,4 @@ Issue #2115199 by johnv: Some cosmetic changes in workfow_admin_ui.pages.inc.
 Issue #2019345 by johnv: Fixed notice when updating node in certain circumstances.
 Issue #2019345 by johnv: Changed function names in workflow_rules to reflect they are Node API only.
 Issue #2019345 by johnv: Fixed notice when an existing node does not have a workflow value yet.
+Issue #2019345 by johnv: Replaced workflow_show_form() by WorkflowState->showWidget().
